--- a/serverless.yml
+++ b/serverless.yml
@@ -41,6 +41,10 @@ provider:
       Action:
         - "s3:GetObject"
       Resource: "arn:aws:s3:::chikachika-review-images/*"
+    - Effect: Allow
+      Action:
+        - sqs:*
+      Resource: arn:aws:sqs:*:*:*
   environment:
     JWT_SECRET: ${param:JWT_SECRET}
     NCP_access_token: ${param:NCP_access_token}
