병원 키워드 자동완성 API pagination & 주변 병원 API pagination 추가

--- a/serverless.yml
+++ b/serverless.yml
@@ -678,7 +678,7 @@ functions:
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   dbReset:
-    handler: services/dbReset.communitiesTagArray
+    handler: services/dbReset.clinicNameSpaceRemove
     events:
       - http:
           path: dbReset
