--- a/serverless.yml
+++ b/serverless.yml
@@ -677,6 +677,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  residenceClinicsAndReviews:
+    handler: services/residence.residenceClinicsAndReviews
+    events:
+      - http:
+          path: residence/clinicsAndReviews
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   dbReset:
     handler: services/dbReset.clinicNameSpaceRemove
     events:
