--- a/serverless.yml
+++ b/serverless.yml
@@ -547,6 +547,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  getScrapClinic:
+    handler: services/scrap.getScrapClinic
+    events:
+      - http:
+          path: scrap/clinic
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   detailClinics:
     handler: services/dentalClinic.detailClinics
     events:
