--- a/serverless.yml
+++ b/serverless.yml
@@ -729,11 +729,11 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
-  residenceClincReviews:
-    handler: services/main.residenceClincReviews
+  residenceClinicReviews:
+    handler: services/main.residenceClinicReviews
     events:
       - http:
-          path: residenceClincReviews
+          path: residenceClinicReviews
           method: get
           cors: true
           authorizer:
