공휴일 치과병원 확인 로직 수정

--- a/serverless.yml
+++ b/serverless.yml
@@ -743,7 +743,7 @@ functions:
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   dbReset:
-    handler: services/dbReset.clinicNameSpaceRemove
+    handler: services/dbReset.sidoSigungu
     events:
       - http:
           path: dbReset
