알림 목록 타입 통합

--- a/serverless.yml
+++ b/serverless.yml
@@ -657,7 +657,7 @@ functions:
     handler: services/notification.getNotifications
     events:
       - http:
-          path: notifications/{type}
+          path: notifications
           method: get
           cors: true
           authorizer:
