--- a/serverless.yml
+++ b/serverless.yml
@@ -757,6 +757,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  postReports:
+    handler: services/report.reports
+    events:
+      - http:
+          path: reports
+          method: post
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   dbReset:
     handler: services/dbReset.sidoSigungu
     events:
