--- a/serverless.yml
+++ b/serverless.yml
@@ -795,6 +795,12 @@ functions:
       - sqs: 
           arn: arn:aws:sqs:ap-northeast-1:751612718299:likeNotification-${opt:stage, 'dev'}
           enabled: true
+  pushNotifiactionReportTaskWorker:
+    handler: services/notificationTaskWorker.report
+    events:
+      - sqs: 
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification
+          enabled: true
 resources:
   Resources:
     commentNotification:
@@ -813,6 +819,10 @@ resources:
       Type: "AWS::SQS::Queue"
       Properties:
         QueueName: eventNotification-${self:provider.stage}
+    reporttNotification:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: reportNotification
 plugins:
   - serverless-offline
   - serverless-apigw-binary
