주변 병원 쿼리 파라미터 캐싱 항목 추가

--- a/serverless.yml
+++ b/serverless.yml
@@ -223,6 +223,8 @@ functions:
               - name: request.querystring.holiday
               - name: request.querystring.maplat
               - name: request.querystring.maplong
+              - name: request.querystring.limit
+              - name: request.querystring.offset
           authorizer:
               name: verify-token
               # this tells the lambda where to take the information from,
