--- a/serverless.yml
+++ b/serverless.yml
@@ -821,6 +821,10 @@ resources:
       Type: "AWS::SQS::Queue"
       Properties:
         QueueName: eventNotification-${self:provider.stage}
+    reportNotification:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: reportNotification-${self:provider.stage}
 plugins:
   - serverless-offline
   - serverless-apigw-binary
