--- a/serverless.yml
+++ b/serverless.yml
@@ -801,7 +801,7 @@ functions:
     handler: services/notificationTaskWorker.report
     events:
       - sqs: 
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification-${opt:stage, 'dev'}
           enabled: true
 resources:
   Resources:
