--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
+    "phin": "^3.5.1",
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "sequelize": "^6.3.5",
