--- a/serverless.yml
+++ b/serverless.yml
@@ -803,6 +803,12 @@ functions:
       - sqs: 
           arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification-${opt:stage, 'dev'}.fifo
           enabled: true
+  pushNotifiactionBillsVerifyTaskWorker:
+    handler: services/notificationTaskWorker.billsVerify
+    events:
+      - sqs: 
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerifyNotification-${self:provider.stage}.fifo
+          enabled: true
 resources:
   Resources:
     commentNotification:
@@ -825,6 +831,11 @@ resources:
       Type: "AWS::SQS::Queue"
       Properties:
         QueueName: reportNotification-${self:provider.stage}.fifo
+        FifoQueue: true
+    billsVerifyNotification:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: billsVerifyNotification-${self:provider.stage}.fifo
         FifoQueue: true
 plugins:
   - serverless-offline
