--- a/serverless.yml
+++ b/serverless.yml
@@ -803,11 +803,11 @@ functions:
       - sqs: 
           arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification-${opt:stage, 'dev'}.fifo
           enabled: true
-  pushNotifiactionBillsVerifyTaskWorker:
+  billsVerifyTaskWorker:
     handler: services/notificationTaskWorker.billsVerify
     events:
       - sqs: 
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerifyNotification-${self:provider.stage}.fifo
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerify-${self:provider.stage}.fifo
           enabled: true
 resources:
   Resources:
@@ -832,10 +832,10 @@ resources:
       Properties:
         QueueName: reportNotification-${self:provider.stage}.fifo
         FifoQueue: true
-    billsVerifyNotification:
+    billsVerify:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: billsVerifyNotification-${self:provider.stage}.fifo
+        QueueName: billsVerify-${self:provider.stage}.fifo
         FifoQueue: true
 plugins:
   - serverless-offline
