--- a/serverless.yml
+++ b/serverless.yml
@@ -810,6 +810,12 @@ functions:
       - sqs: 
           arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerify-${self:provider.stage}.fifo
           enabled: true
+  deleteSQSMessageTaskWorker:
+    handler: services/notificationTaskWorker.deleteSQSMessage
+    events:
+      - sqs: 
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:deleteSQSMessage-${self:provider.stage}
+          enabled: true
 resources:
   Resources:
     commentNotification:
@@ -839,6 +845,11 @@ resources:
         QueueName: billsVerify-${self:provider.stage}.fifo
         FifoQueue: true
         ContentBasedDeduplication: true
+        ReceiveMessageWaitTimeSeconds: 20
+    deleteSQSMessage:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: deleteSQSMessage-${self:provider.stage}
         ReceiveMessageWaitTimeSeconds: 20
 plugins:
   - serverless-offline
