--- a/serverless.yml
+++ b/serverless.yml
@@ -814,7 +814,7 @@ functions:
     handler: services/notificationTaskWorker.deleteSQSMessage
     events:
       - sqs: 
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:deleteSQSMessage-${self:provider.stage}
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:ReceiverDeadLetterQueue-${self:provider.stage}
           enabled: true
 resources:
   Resources:
@@ -891,7 +891,7 @@ resources:
     ReceiverDeadLetterQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: deleteSQSMessage-${self:provider.stage}
+        QueueName: ReceiverDeadLetterQueue-${self:provider.stage}
         ReceiveMessageWaitTimeSeconds: 20
 plugins:
   - serverless-offline
