--- a/serverless.yml
+++ b/serverless.yml
@@ -816,6 +816,12 @@ functions:
       - sqs: 
           arn: arn:aws:sqs:ap-northeast-1:751612718299:ReceiverDeadLetterQueue-${self:provider.stage}
           enabled: true
+  deleteFifoSQSMessageTaskWorker:
+    handler: services/notificationTaskWorker.deleteFifoSQSMessage
+    events:
+      - sqs: 
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:FifoReceiverDeadLetterQueue-${self:provider.stage}
+          enabled: true
 resources:
   Resources:
     commentNotification:
@@ -892,6 +898,13 @@ resources:
       Type: "AWS::SQS::Queue"
       Properties:
         QueueName: ReceiverDeadLetterQueue-${self:provider.stage}
+        ReceiveMessageWaitTimeSeconds: 20
+    FifoReceiverDeadLetterQueue:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: FifoReceiverDeadLetterQueue-${self:provider.stage}
+        FifoQueue: true
+        ContentBasedDeduplication: true
         ReceiveMessageWaitTimeSeconds: 20
 plugins:
   - serverless-offline
