--- a/serverless.yml
+++ b/serverless.yml
@@ -820,7 +820,7 @@ functions:
     handler: services/notificationTaskWorker.deleteFifoSQSMessage
     events:
       - sqs: 
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:FifoReceiverDeadLetterQueue-${self:provider.stage}
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:FifoReceiverDeadLetterQueue-${self:provider.stage}.fifo
           enabled: true
 resources:
   Resources:
@@ -902,7 +902,7 @@ resources:
     FifoReceiverDeadLetterQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: FifoReceiverDeadLetterQueue-${self:provider.stage}
+        QueueName: FifoReceiverDeadLetterQueue-${self:provider.stage}.fifo
         FifoQueue: true
         ContentBasedDeduplication: true
         ReceiveMessageWaitTimeSeconds: 20
