--- a/serverless.yml
+++ b/serverless.yml
@@ -137,6 +137,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  postRecentSearch:
+    handler: services/recentSearch.postRecentSearch
+    events:
+      - http:
+          path: search/recent
+          method: post
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   getRecentSearch:
     handler: services/recentSearch.getRecent
     events:
