--- a/serverless.yml
+++ b/serverless.yml
@@ -57,6 +57,10 @@ provider:
     fcmBucketName: ${param:fcmBucketName, self:custom.secrets.fcmBucketName}
     fcmkey: ${param:fcmkey, self:custom.secrets.fcmkey}
     FbDBURL: ${param:fcmkey, self:custom.secrets.FbDBURL}
+    DB_Host: ${param:DB_Host, self:custom.secrets.DB_Host}
+    DB_Port: ${param:DB_Port, self:custom.secrets.DB_Port}
+    DB_Password: ${param:DB_Password, self:custom.secrets.DB_Password}
+    DB_Username: ${param:DB_Username, self:custom.secrets.DB_Username}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
