--- a/serverless.yml
+++ b/serverless.yml
@@ -58,7 +58,7 @@ provider:
     stage: ${self:provider.stage}
     fcmBucketName: ${param:fcmBucketName, self:custom.secrets.fcmBucketName}
     fcmkey: ${param:fcmkey, self:custom.secrets.fcmkey}
-    FbDBURL: ${param:fcmkey, self:custom.secrets.FbDBURL}
+    FbDBURL: ${param:FbDBURL, self:custom.secrets.FbDBURL}
     DB_Host: ${param:DB_Host, self:custom.secrets.DB_Host}
     DB_Port: ${param:DB_Port, self:custom.secrets.DB_Port}
     DB_Password: ${param:DB_Password, self:custom.secrets.DB_Password}
