--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,8 @@ service: chikachika-API-serverless
 org: jiwon112
 
 useDotenv: true
+package:
+  individually: true
 
 custom:
   #secrets: ${file(secrets.json)}
