--- a/serverless.yml
+++ b/serverless.yml
@@ -37,15 +37,17 @@ provider:
     binaryMediaTypes:
       - 'multipart/form-data'
       - 'image/*'
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action:
-        - "s3:GetObject"
-      Resource: "arn:aws:s3:::chikachika-review-images/*"
-    - Effect: Allow
-      Action:
-        - sqs:*
-      Resource: arn:aws:sqs:*:*:*
+  iam:
+    role:
+      statements:
+        - Effect: "Allow"
+          Action:
+            - "s3:GetObject"
+          Resource: "arn:aws:s3:::chikachika-review-images/*"
+        - Effect: Allow
+          Action:
+            - sqs:*
+          Resource: arn:aws:sqs:*:*:*
   environment:
     JWT_SECRET: ${param:JWT_SECRET}
     NCP_access_token: ${param:NCP_access_token}
