--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-serverless-express-binary": "^1.0.1",
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.6",
     "firebase-admin": "^9.4.2",
