jest 유닛 테스트 & api 호출

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,7 +18,7 @@ custom:
     number: 1
   scripts:
     hooks:
-      'deploy:createDeploymentArtifacts': npm test
+      'deploy:finalize': npm test
 
 dashboard:
   lambda:
