jest 유닛 테스트 stage 분리 수정

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,7 +18,7 @@ custom:
     number: 1
   scripts:
     hooks:
-      'deploy:finalize': npm test
+      'deploy:finalize': npm test -- -stage=${opt:stage, 'dev'}
 
 dashboard:
   lambda:
