--- a/serverless.yml
+++ b/serverless.yml
@@ -69,6 +69,7 @@ provider:
     DB_Username: ${param:DB_Username}
     cloudFrontUrl: ${param:cloudFrontUrl}
     USERTOKEN: ${param:USERTOKEN}
+    apiUrl: ${param:apiUrl}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
