문자 인증 twilio API 변경 & 병원 키워드 검색 기록 targetId null 값으로 설정

--- a/serverless.yml
+++ b/serverless.yml
@@ -70,6 +70,8 @@ provider:
     cloudFrontUrl: ${param:cloudFrontUrl}
     USERTOKEN: ${param:USERTOKEN}
     apiUrl: ${param:apiUrl}
+    TWILIO_ACCOUNT_SID: ${param:TWILIO_ACCOUNT_SID}
+    TWILIO_AUTH_TOKEN: ${param:TWILIO_AUTH_TOKEN}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
