--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "serverless-plugin-scripts": "^1.0.2",
     "serverless-webpack": "^5.3.5",
     "slack-node": "^0.1.8",
+    "twilio": "^3.57.0",
     "webpack": "^5.16.0",
     "xml-js": "^1.6.11"
   },
