--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,9 @@ org: jiwon112
 
 useDotenv: true
 
+package:
+  exclude:
+    - node_modules/**
 custom:
   #secrets: ${file(secrets.json)}
   apigwBinary:
