--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "artillery": "^1.6.2",
     "jest": "^26.6.3",
     "serverless-apigw-binary": "^0.4.4",
+    "serverless-latest-layer-version": "^2.1.1",
     "serverless-offline-env": "^0.2.0",
     "serverless-prune-plugin": "^1.4.3",
     "supertest": "^6.1.3"
