--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,8 @@ provider:
   region: ap-northeast-1 # optional, default: us-east-1
   stackName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the CloudFormation stack
   apiName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the API Gateway API
+  logs:
+    restApi: false
   tracing:
     apiGateway: true
     lambda: true
