--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,10 @@ package:
 
 custom:
   #secrets: ${file(secrets.json)}
+  enabled:
+    dev: false
+    test: false
+    prod: true
   stage: ${opt:stage, self:provider.stage}
   domains:
     prod: api.chikachika-app.com
@@ -26,7 +30,7 @@ custom:
     types:           #list of mime-types 
        - 'multipart/form-data'
   apiGatewayCaching:
-    enabled: true
+    enabled: ${self:custom.enabled.${opt:stage}, self.enabled.dev}
     clusterSize: '0.5' # defaults to '0.5'
     ttlInSeconds: 300 # defaults to the maximum allowed: 3600
   prune:
