자동완성 읍면동 검색 쿼리 수정

--- a/serverless.yml
+++ b/serverless.yml
@@ -952,6 +952,31 @@ functions:
           path: admin/verifyBills/{purpose}
           method: get
           cors: true
+  getClinicByAttributes:
+    handler: services/main.getClinicByAttributes
+    layers:
+      - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
+    events:
+      - http:
+          path: clinic/{attrType}
+          method: get
+          cors: true
+          caching:
+            enabled: true
+            ttlInSeconds: 300 # overrides the global setting for ttlInSeconds
+            cacheKeyParameters:
+              - name: request.querystring.cityId
+              - name: request.querystring.lat
+              - name: request.querystring.long
+              - name: request.querystring.sort
+              - name: request.querystring.limit
+              - name: request.querystring.offset
+          authorizer:
+            name: verify-token
+            # this tells the lambda where to take the information from,
+            # in our case the HTTP Authorization header
+            identitySource: method.request.header.Authorization
+            resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   pushNotifiactionCommentTaskWorker:
     handler: services/notificationTaskWorker.comment
     layers:
