캐싱 stage prod false로 수정 & frameworkVersion: 2

--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,7 @@ app: chikachika
 service: chikachika-API-serverless
 org: jiwon112
 
+frameworkVersion: "2"
 useDotenv: true
 configValidationMode: error
 
