--- a/serverless.yml
+++ b/serverless.yml
@@ -984,7 +984,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:commentNotification
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:commentNotification-${opt:stage, 'dev'}
           enabled: true
   pushNotifiactionReplyTaskWorker:
     handler: services/notificationTaskWorker.reply
@@ -992,7 +992,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:replyNotification
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:replyNotification-${opt:stage, 'dev'}
           enabled: true
   pushNotifiactionLikeTaskWorker:
     handler: services/notificationTaskWorker.like
@@ -1000,7 +1000,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:likeNotification
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:likeNotification-${opt:stage, 'dev'}
           enabled: true
   pushNotifiactionReportTaskWorker:
     handler: services/notificationTaskWorker.report
@@ -1008,7 +1008,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification.fifo
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:reportNotification-${opt:stage, 'dev'}.fifo
           enabled: true
   billsVerifyTaskWorker:
     handler: services/notificationTaskWorker.billsVerify
@@ -1016,7 +1016,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerify.fifo
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:billsVerify-${self:provider.stage}.fifo
           enabled: true
   deleteSQSMessageTaskWorker:
     handler: services/notificationTaskWorker.deleteSQSMessage
@@ -1024,7 +1024,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:ReceiverDeadLetterQueue
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:ReceiverDeadLetterQueue-${self:provider.stage}
           enabled: true
   deleteFifoSQSMessageTaskWorker:
     handler: services/notificationTaskWorker.deleteFifoSQSMessage
@@ -1032,7 +1032,7 @@ functions:
       - arn:aws:lambda:ap-northeast-1:751612718299:layer:NodeDataStreamUtils:latest
     events:
       - sqs:
-          arn: arn:aws:sqs:ap-northeast-1:751612718299:FifoReceiverDeadLetterQueue.fifo
+          arn: arn:aws:sqs:ap-northeast-1:751612718299:FifoReceiverDeadLetterQueue-${self:provider.stage}.fifo
           enabled: true
   subwayAroundClinics:
     handler: services/main.subwayAroundClinics
@@ -1049,7 +1049,7 @@ resources:
     commentNotification:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: commentNotification
+        QueueName: commentNotification-${self:provider.stage}
         MessageRetentionPeriod: 600
         ReceiveMessageWaitTimeSeconds: 20
         RedrivePolicy:
@@ -1061,7 +1061,7 @@ resources:
     replyNotification:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: replyNotification
+        QueueName: replyNotification-${self:provider.stage}
         MessageRetentionPeriod: 600
         ReceiveMessageWaitTimeSeconds: 20
         RedrivePolicy:
@@ -1073,7 +1073,7 @@ resources:
     likeNotification:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: likeNotification
+        QueueName: likeNotification-${self:provider.stage}
         MessageRetentionPeriod: 600
         ReceiveMessageWaitTimeSeconds: 20
         RedrivePolicy:
@@ -1085,7 +1085,7 @@ resources:
     eventNotification:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: eventNotification
+        QueueName: eventNotification-${self:provider.stage}
         MessageRetentionPeriod: 600
         ReceiveMessageWaitTimeSeconds: 20
         RedrivePolicy:
@@ -1097,7 +1097,7 @@ resources:
     reportNotification:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: reportNotification.fifo
+        QueueName: reportNotification-${self:provider.stage}.fifo
         FifoQueue: true
         ReceiveMessageWaitTimeSeconds: 20
         MessageRetentionPeriod: 600
@@ -1110,7 +1110,7 @@ resources:
     billsVerify:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: billsVerify.fifo
+        QueueName: billsVerify-${self:provider.stage}.fifo
         FifoQueue: true
         ContentBasedDeduplication: true
         ReceiveMessageWaitTimeSeconds: 20
@@ -1124,12 +1124,12 @@ resources:
     ReceiverDeadLetterQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: ReceiverDeadLetterQueue
+        QueueName: ReceiverDeadLetterQueue-${self:provider.stage}
         ReceiveMessageWaitTimeSeconds: 20
     FifoReceiverDeadLetterQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: FifoReceiverDeadLetterQueue.fifo
+        QueueName: FifoReceiverDeadLetterQueue-${self:provider.stage}.fifo
         FifoQueue: true
         ContentBasedDeduplication: true
         ReceiveMessageWaitTimeSeconds: 20
