--- a/serverless.yml
+++ b/serverless.yml
@@ -94,6 +94,7 @@ provider:
     apiUrl: ${param:apiUrl}
     TWILIO_ACCOUNT_SID: ${param:TWILIO_ACCOUNT_SID}
     TWILIO_AUTH_TOKEN: ${param:TWILIO_AUTH_TOKEN}
+    defaultProfileImgUrl: ${param:defaultProfileImgUrl}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
