--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ custom:
   cacheEnabled:
     dev: false
     test: false
-    prod: true
+    prod: false
   stage: ${opt:stage, self:provider.stage}
   domains:
     prod: api.chikachika-app.com
